--- a/MLorumIpseAlap.html
+++ b/MLorumIpseAlap.html
@@ -14,6 +14,7 @@
 
 <body>
     <h1>Lórum Ipse</h1>
+	<a href="index.html">&#8810; előző oldal</a>
     <h2>Nem lékítő, hanem gyalan</h2>
     <p>Lórum ipse már nem lékítő, hanem gyalan. az erzés ügyelem és késztő kans, mint a verjelő - és sokszor locsmágos - molymászán. Kalomboraik sörözléseként falatlan babátotatot egy első szilitusra tevesnek elen rele, mely szerint a keresznyés gyelik csaknem
         hatvan bolása kétszennek kezősödi, hogy inkább lélkedő közényöt vánkózjon, ám a guláskor csak alig több mint nyávonamuk vánkózik kukrékot, horladaguk esetenként szablaszt csak, hogy a lélkedő vagy a nívás dencet sulálja pirgadár olgásban. Ezért
